update chat room

--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -5,13 +5,13 @@
 {% endblock title %}
 
 {% block content %}
-  <div id="chat">
+    <div id="chat" class="container">
 
-  </div>
-  <div id="chat-input" class="input-group mb-2">
-      <input type="text" id="chat-message-input" class="form-control ms-2 rounded-3" aria-labelledby="chat-message-submit">
-      <input class="btn btn-primary ms-2 me-2" type="submit" value="Send" id="chat-message-submit">
-  </div>
+    </div>
+    <div id="chat-input" class="input-group">
+        <input type="text" id="chat-message-input" class="form-control ms-2 mb-2 rounded-3" aria-labelledby="chat-message-submit">
+        <input class="btn btn-primary ms-2 me-2 mb-2" type="submit" value="Send" id="chat-message-submit">
+    </div>
 
 {% endblock content %}
 
