--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -17,15 +17,26 @@
       
       <div class="d-flex text-center">
         <a class="navbar-toggler" role="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarToggler" aria-controls="sidebarToggler" aria-expanded="false" aria-label="Toggle navigation">
-          <strong class="m-3 me-0 text-md-start">Courses</strong>
-          <span class="mt-1">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-three-dots-vertical" viewBox="0 0 16 16">
+            <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-three-dots-vertical" viewBox="0 0 16 16" style="margin-left: -15px;">
+            <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-three-dots-vertical" viewBox="0 0 16 16" style="margin-left: -15px;">
+            <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+          </svg>
+        </a>
+        <div class="text-center justify-content-center align-items-center mt-1 navbar-toggler">
+          <strong class="me-0 text-center">Courses</strong>
+          <span class="mt-1 text-center">
             {% if subject %}
               - {{ subject.title}}
             {% else %}
               - All courses
             {% endif %}
-            </span>
-        </a>
+          </span>
+        </div>
         
       </div>    
     
