--- a/courses/static/css/style.css
+++ b/courses/static/css/style.css
@@ -129,37 +129,20 @@ a {
 
 
 #chat {
-  top: 64px;
-  bottom:0;
-  position:fixed;
-  width:100%;
+  top: 1rem;
+  bottom:auto;
+  position:relative;
+  width: 100%;
   overflow-y:scroll;
   padding-bottom:150px;
 }
 
-#chat .message {
-  background:#efefef;
-  padding:10px 20px;
-  border-radius:4px;
-  width:auto;
-  display:inline;
-  float:left;
-  margin:10px 10px 0;
-  min-width:440px;
-  clear:both;
-}
-
-#chat .message.me {
-  display:inline;
-  float:right;
-  background: rgb(223, 23, 23);
-  color: white;
-}
 
 #chat .date {
   color: black;
   font-style:italic;
   font-size:12px;
+
 }
 
 #chat-input {
@@ -169,6 +152,7 @@ a {
   width:100%;
   padding-top:20px;
 }
+
 
 /* #chat-input input {
   width:96%;
